// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`websocket interactions get multiple properties 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "testProperty",
    ],
    Array [
      "testProperty2",
    ],
  ],
}
`;

exports[`websocket interactions get property 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "testProperty",
    ],
  ],
}
`;

exports[`websocket interactions request action 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "testAction",
      Object {},
    ],
  ],
}
`;

exports[`websocket interactions request multiple actions 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "testAction",
      Object {},
    ],
    Array [
      "testAction2",
      "data",
    ],
  ],
}
`;

exports[`websocket interactions set multiple properties 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "testProperty",
      "10",
    ],
    Array [
      "testProperty2",
      "20",
    ],
  ],
}
`;

exports[`websocket interactions set multiple properties 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "testProperty",
      "10",
    ],
    Array [
      "testProperty2",
      "20",
    ],
  ],
}
`;

exports[`websocket interactions set property 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "testProperty",
      "10",
    ],
  ],
}
`;

exports[`websocket subscriptions subscribe to all 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "{\\"messageType\\":\\"subscribe\\",\\"data\\":{\\"status\\":\\"200\\",\\"message\\":\\"Subscribed to all interactions\\"}}",
    ],
  ],
}
`;

exports[`websocket subscriptions subscribe to interaction 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "{\\"messageType\\":\\"addSubscription\\",\\"data\\":{\\"status\\":\\"200\\",\\"message\\":\\"Subscribed to property testProperty\\"}}",
    ],
  ],
}
`;

exports[`websocket subscriptions subscribe to multiple interactions 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "{\\"messageType\\":\\"addSubscription\\",\\"data\\":{\\"status\\":\\"200\\",\\"message\\":\\"Subscribed to property testProperty1\\"}}",
    ],
    Array [
      "{\\"messageType\\":\\"addSubscription\\",\\"data\\":{\\"status\\":\\"200\\",\\"message\\":\\"Subscribed to property testProperty2\\"}}",
    ],
    Array [
      "{\\"messageType\\":\\"addSubscription\\",\\"data\\":{\\"status\\":\\"200\\",\\"message\\":\\"Subscribed to action testAction\\"}}",
    ],
    Array [
      "{\\"messageType\\":\\"addSubscription\\",\\"data\\":{\\"status\\":\\"200\\",\\"message\\":\\"Subscribed to event testEvent1\\"}}",
    ],
    Array [
      "{\\"messageType\\":\\"addSubscription\\",\\"data\\":{\\"status\\":\\"200\\",\\"message\\":\\"Subscribed to event testEvent2\\"}}",
    ],
  ],
}
`;

exports[`websocket subscriptions unsubscribe from all 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "{\\"messageType\\":\\"unsubscribe\\",\\"data\\":{\\"status\\":\\"200\\",\\"message\\":\\"Unsubscribed from all interactions\\"}}",
    ],
  ],
}
`;

exports[`websocket subscriptions unsubscribe from interaction 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "{\\"messageType\\":\\"removeSubscription\\",\\"data\\":{\\"status\\":\\"200\\",\\"message\\":\\"Unsubscribed from property testProperty\\"}}",
    ],
  ],
}
`;

exports[`websocket subscriptions unsubscribe from multiple interactions 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "{\\"messageType\\":\\"removeSubscription\\",\\"data\\":{\\"status\\":\\"200\\",\\"message\\":\\"Unsubscribed from property testProperty1\\"}}",
    ],
    Array [
      "{\\"messageType\\":\\"removeSubscription\\",\\"data\\":{\\"status\\":\\"200\\",\\"message\\":\\"Unsubscribed from property testProperty2\\"}}",
    ],
    Array [
      "{\\"messageType\\":\\"removeSubscription\\",\\"data\\":{\\"status\\":\\"200\\",\\"message\\":\\"Unsubscribed from action testAction1\\"}}",
    ],
    Array [
      "{\\"messageType\\":\\"removeSubscription\\",\\"data\\":{\\"status\\":\\"200\\",\\"message\\":\\"Unsubscribed from action testAction2\\"}}",
    ],
    Array [
      "{\\"messageType\\":\\"removeSubscription\\",\\"data\\":{\\"status\\":\\"200\\",\\"message\\":\\"Unsubscribed from event testEvent\\"}}",
    ],
  ],
}
`;
